--- a/formulaire.html
+++ b/formulaire.html
@@ -88,10 +88,20 @@
                     <div><br>
                         <span class="gras">Ajouter comme article déjà acheté ?</span><br><br>
                         <label for="oui">Oui</label>
-                            <input type="radio"  name="oui" required>
+                            <input type="radio"  name="ouiounon" required>
                         <label for="non">Non</label>
-                            <input type="radio"  name="non">
+                            <input type="radio"  name="ouiounon"><br>
                     </div>
+                    <div id="urgencespace">
+                        <span class="gras">Niveau de l'urgence ?</span><br><br>
+                            <label for="Urgent">Urgent</label>
+                                <input type="radio"  name="urgence" required>
+                            <label for="Moyenurgent">Moyen urgent</label>
+                                <input type="radio"  name="urgence">
+                            <label for="Pasurgent">Pas urgent</label>
+                                <input type="radio"  name="urgence">
+                    </div>
+                </div>
                     </section>
                     <input id="ajouterbutton" type="submit" name="ajouter" value="Ajouter">
                     </form>
